Replace index.css, make expiries break into a new line when too long, fix button overflow
Address #12, partially address #9

--- a/src/styles/_keyboard.scss
+++ b/src/styles/_keyboard.scss
@@ -6,9 +6,13 @@
   background-color: #eeeeee;
   color: #000000;
   border-radius: 5px;
-  font-size: 24px;
-  line-height: 0;
-  padding: 0;
+  font-size: 20px;
+  line-height: 20px;
+
+  padding: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
   // Undecided - TODO: decide whether button text should be uppercase
   //text-transform: uppercase;
