--- a/src/styles/_viewport.scss
+++ b/src/styles/_viewport.scss
@@ -93,7 +93,7 @@
         text-align: left;
 
         // Truncate long categories: TODO make this work properly on all screen & tray sizes
-        width: 80%;
+        width: 60%;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
@@ -103,8 +103,14 @@
       > div.trayExpiry {
         bottom: 0;
         right: 0;
-        font-size: 25px;
+        font-size: 20px;
         padding: 0 5px;
+
+        // Break lines when it gets too wide
+        width: 30%;
+        text-align: center;
+        word-wrap: break-word;
+
         background-color: #aaa; // this is the default colour when there is no expiry specified
       }
 
